--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -1,1 +1,6 @@
 <p>This is the partial for view 1.</p>
+<ul ng-controller="MyCtrl1">
+  <li ng-repeat="domain in domains" ng-controller="MyCtrl1">
+    {{domain.name}}
+  </li>
+</ul>
