First Construct accordion.

--- a/app/partials/domain.html
+++ b/app/partials/domain.html
@@ -3,7 +3,7 @@
   <ul>
     <li>
       A domain is the top-level category in CFIR. There are
-      {{domains.length}} domains currently. They are listed
+      {{domainsLength}} domains currently. They are listed
       in the menu on the left.
     </li>
     <li>
