--- a/app/partials/intervention_characteristics.html
+++ b/app/partials/intervention_characteristics.html
@@ -1,9 +1,38 @@
 <div class="well" ng-controller="MyCtrl1">
   <h4>Intervention Characteristics</h4>
-  {{domains[0].description}}
+  {{domains["Intervention Characteristics"].description}}
   <p />
   <p>
     To learn more, see the
     <a href="http://www.wiki.cf-ir.net/index.php?title=Intervention_Characteristics" target="_blank">wiki</a>
   </p>
+</div>
+
+<div class="well">
+  <h4>Constructs</h4>
+
+  <div class="panel-group" id="accordion" ng-controller="MyCtrl1">
+    <div class="panel panel-default" ng-repeat="construct in intervention_characteristics.constructs">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" ng-href="intervention_characteristics#{{construct.slug}}">{{construct.name}}</a>
+        </h4>
+      </div>
+      <div id="{{construct.slug}}" class="panel-collapse collapse">
+        <div class="panel-body">
+          {{construct.description}}
+          <p/>
+          <p>
+            To learn more see the
+            <a ng-href="http://www.wiki.cf-ir.net/index.php?title={{construct.slug}}"
+                target="_blank">wiki</a>.
+          </p>
+          <p/>
+          <p>
+            <a href="#">Questions</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
