--- a/app/partials/intro.html
+++ b/app/partials/intro.html
@@ -5,7 +5,7 @@
   <ul ng-controller="MyCtrl1">
     <li>
       The top level is the domain. There are currently
-      {{domains.length}} domains. To learn more click the
+      {{domainsLength}} domains. To learn more click the
       Domains link on the left.
     </li>
     <li>
