Questions with checkboxes

--- a/app/partials/intro.html
+++ b/app/partials/intro.html
@@ -2,7 +2,7 @@
   This app will enable you to build your own customized
   interview guide. An interview has the following structure:
   <p></p>
-  <ul ng-controller="MyCtrl1">
+  <ul ng-controller="DomainsCtrl">
     <li>
       The top level is the domain. There are currently
       {{domainsLength}} domains. To learn more click the
