--- a/app/partials/selected_domain.html
+++ b/app/partials/selected_domain.html
@@ -1,38 +1,40 @@
-<div class="well" ng-controller="MyCtrl1">
-  <h4>{{selected_domain.name}}</h4>
-  {{selected_domain.description}}
-  <p />
-  <p>
-    To learn more, see the
-    <a href="http://www.wiki.cf-ir.net/index.php?title=Intervention_Characteristics" target="_blank">wiki</a>
-  </p>
-</div>
+<span ng-controller="SelectedDomainCtrl">
+  <div class="well">
+    <h4>{{selected_domain.name}}</h4>
+    {{selected_domain.description}}
+    <p />
+    <p>
+      To learn more, see the
+      <a href="http://www.wiki.cf-ir.net/index.php?title={{selected_domain_key}}" target="_blank">wiki</a>
+    </p>
+  </div>
 
-<div class="well">
-  <h4>Constructs</h4>
+  <div class="well">
+    <h4>Constructs</h4>
 
-  <div class="panel-group" id="accordion" ng-controller="MyCtrl1">
-    <div class="panel panel-default" ng-repeat="construct in selected_domain.constructs">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" ng-href="selected_domain#{{construct.slug}}">{{construct.name}}</a>
-        </h4>
-      </div>
-      <div id="{{construct.slug}}" class="panel-collapse collapse">
-        <div class="panel-body">
-          {{construct.description}}
-          <p/>
-          <p>
-            To learn more see the
-            <a ng-href="http://www.wiki.cf-ir.net/index.php?title={{construct.slug}}"
-                target="_blank">wiki</a>.
-          </p>
-          <p/>
-          <p>
-            <a href="#">Questions</a>
-          </p>
+    <div class="panel-group" id="accordion">
+      <div class="panel panel-default" ng-repeat="(key, value) in selected_domain.constructs">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a data-toggle="collapse" data-parent="#accordion" ng-href="selected_domain#{{key}}">{{value.name}}</a>
+          </h4>
+        </div>
+        <div id="{{key}}" class="panel-collapse collapse">
+          <div class="panel-body">
+            {{selected_domain.constructs[key].description}}
+            <p/>
+            <p>
+              To learn more see the
+              <a ng-href="http://www.wiki.cf-ir.net/index.php?title={{key}}"
+                  target="_blank">wiki</a>.
+            </p>
+            <p/>
+            <p>
+              <a ng-href="#/questions/{{key}}">Questions</a>
+            </p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</span>
