--- a/app/css/app.css
+++ b/app/css/app.css
@@ -45,7 +45,7 @@ body{margin-top:50px;}
 }
 
 .sidebar-nav li {
-    line-height: 40px;
+    line-height: 30px;
     text-indent: 20px;
 }
 
@@ -67,8 +67,8 @@ body{margin-top:50px;}
 }
 
 .sidebar-nav > .sidebar-brand {
-    height: 65px;
-    line-height: 60px;
+    height: 35px;
+    line-height: 30px;
     font-size: 18px;
 }
 
@@ -79,6 +79,10 @@ body{margin-top:50px;}
 .sidebar-nav > .sidebar-brand a:hover {
     color: #fff;
     background: none;
+}
+
+.sidebar-nav > .sidebar-item {
+    text-indent: 30px;
 }
 
 .content-header {
