--- a/app/partials/questions.html
+++ b/app/partials/questions.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" ng-controller="QuestionCtrl">
+<div class="panel panel-primary" ng-controller="QuestionCtrl">
   <div class="panel-heading">
     <h4 class="panel-title">
       {{selected_domain.name}}: {{selected_construct.name}}
