--- a/app/css/app.css
+++ b/app/css/app.css
@@ -23,7 +23,7 @@ body{margin-top:50px;}
     margin-left: -250px;
     left: 250px;
     width: 250px;
-    background: #2c3e50;
+    background: #3b82ba;
     position: fixed;
     height: 100%;
     overflow-y: auto;
@@ -73,7 +73,7 @@ body{margin-top:50px;}
 }
 
 .sidebar-nav > .sidebar-brand a {
-    color: #999999;
+    color: #fff;
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
