--- a/app/partials/selected_domain.html
+++ b/app/partials/selected_domain.html
@@ -1,4 +1,4 @@
-<span ng-controller="SelectedDomainCtrl">
+<div ng-controller="SelectedDomainCtrl">
   <div class="well">
     <div class="panel panel-primary">
       <div class="panel-heading">
@@ -6,10 +6,10 @@
       </div>
       <div class="panel-body">
         {{selected_domain.description}}
-        <p />
+        <p>
         <p>
           To learn more, see the
-          <a href="http://www.wiki.cf-ir.net/index.php?title={{selected_domain_key}}" target="_blank">wiki</a>
+          <a href="http://cfirwiki.net/wiki/index.php?title={{domain_title}}" target="_blank">wiki</a>
         </p>
       </div>
     </div>
@@ -19,28 +19,28 @@
     <h4>Constructs</h4>
 
     <div class="panel-group" id="accordion">
-      <div class="panel panel-info" ng-repeat="(key, value) in selected_domain.constructs">
+      <div class="panel panel-info" ng-repeat="(idx, construct) in selected_domain.constructs">
         <div class="panel-heading">
           <h4 class="panel-title">
-            <a data-toggle="collapse" data-parent="#accordion" ng-href="selected_domain#{{key}}">{{value.name}}</a>
+            <a data-toggle="collapse" data-parent="#accordion" ng-href="selected_domain#{{idx}}">{{construct.name}}</a>
           </h4>
         </div>
-        <div id="{{key}}" class="panel-collapse collapse">
+        <div id="{{idx}}" class="panel-collapse collapse">
           <div class="panel-body">
-            {{selected_domain.constructs[key].description}}
-            <p/>
+            {{construct.description}}
+            <p>
             <p>
               To learn more see the
-              <a ng-href="http://www.wiki.cf-ir.net/index.php?title={{key}}"
+              <a ng-href="http://cfirwiki.net/wiki/index.php?title={{construct_title(construct.name)}}"
                   target="_blank">wiki</a>.
             </p>
-            <p/>
             <p>
-              <a ng-href="#/questions/{{key}}">Questions</a>
+            <p>
+              <a ng-href="#/questions/{{idx}}">Questions</a>
             </p>
           </div>
         </div>
       </div>
     </div>
   </div>
-</span>
+</div>
