Partial impl of taxonomySvc

--- a/app/partials/selected_domain.html
+++ b/app/partials/selected_domain.html
@@ -1,4 +1,4 @@
-<div ng-controller="SelectedDomainCtrl">
+<div ng-controller="ConstructCtrl">
   <div class="well">
     <div class="panel panel-primary">
       <div class="panel-heading">
