--- a/app/partials/guide_howto.html
+++ b/app/partials/guide_howto.html
@@ -1,4 +1,4 @@
-<div class="well" ng-controller="GuideCtrl">
+<div class="well">
   <h4>How to Copy Your Guide into a Word Processor</h4>
       Read through the instructions first.
   <p></p>
@@ -30,6 +30,6 @@
     </li>
   </ol>
   <p>
-    <a href="guide.html" target="_blank" ng-click="saveGuide()">Show Guide</a>
+    <a href="guide.html" target="_blank">Show Guide</a>
   </p>
 </div>
