--- a/app/partials/constructs.html
+++ b/app/partials/constructs.html
@@ -1,31 +1,35 @@
 <div ng-controller="ConstructCtrl">
-  <div class="well">
+  <div class="well"> 
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h4>{{selectedDomain.name}}</h4>
+        <h4>{{domain.name}}</h4>
       </div>
       <div class="panel-body">
-        {{selectedDomain.description}}
+        {{domain.description}}
         <p>
         <p>
-        <input type="checkbox" ng-click="chooseDomain()">&nbsp;&nbsp;Choose ALL constructs and questions.
+        <input type="checkbox" ng-model="domain.selected">
+          &nbsp;&nbsp;Choose ALL constructs and questions.
         <p>
           To learn more, see the
-          <a href="http://cfirwiki.net/wiki/index.php?title={{domainTitle}}" target="_blank">wiki</a>
+          <a href="http://cfirwiki.net/wiki/index.php?title={{domainTitle}}" 
+              target="_blank">wiki
+          </a>
         </p>
       </div>
     </div>
   </div>
 
-  <div class="well">
+  <div class="well" ng-show="!domain.selected">
     <h4>Constructs</h4>
 
     <div class="panel-group" id="accordion">
-      <div class="panel panel-info" ng-repeat="(idx, construct) in selectedDomain.constructs">
+      <div class="panel panel-info" 
+          ng-repeat="(idx, construct) in constructs">
         <div class="panel-heading">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion"
-               ng-href="selectedDomain#{{idx}}" ng-click="setSelectedConstruct(idx)">
+               ng-href="domain#{{idx}}" ng-click="setCurrentConstruct(idx)">
               {{construct.name}}
             </a>
           </h4>
@@ -35,7 +39,8 @@
             {{construct.description}}
             <p>
             <p>
-            <input type="checkbox" ng-click="chooseConstruct(idx)">&nbsp;&nbsp;Choose ALL questions.
+            <input type="checkbox" ng-model="construct.selected">
+              &nbsp;&nbsp;Choose ALL questions.
             <p>
               To learn more see the
               <a ng-href="http://cfirwiki.net/wiki/index.php?title={{constructTitle(construct.name)}}"
@@ -43,7 +48,9 @@
             </p>
             <p>
             <p>
-              <a ng-href="#/questions/{{idx}}">Questions</a>
+              <a ng-href="#/questions/{{idx}}" ng-show="!construct.selected">
+                Questions
+              </a>
             </p>
           </div>
         </div>
