--- a/app/partials/constructs.html
+++ b/app/partials/constructs.html
@@ -12,9 +12,7 @@
           &nbsp;&nbsp;Choose ALL constructs and questions.
         <p>
           To learn more, see the
-          <a href="http://cfirwiki.net/wiki/index.php?title={{domainTitle}}" 
-              target="_blank">wiki
-          </a>
+          <a href="{{wikiUrl(domain.name)}}" target="_blank">wiki</a>.
         </p>
       </div>
     </div>
@@ -22,19 +20,19 @@
 
   <div class="well" ng-show="!domain.selected">
     <h4>Constructs</h4>
-
-    <div class="panel-group" id="accordion">
+    <div class="panel-group" id="construct_accordion">
       <div class="panel panel-info" 
-          ng-repeat="(idx, construct) in constructs">
+          ng-repeat="(constructIdx, construct) in constructs">
         <div class="panel-heading">
           <h4 class="panel-title">
-            <a data-toggle="collapse" data-parent="#accordion"
-               ng-href="domain#{{idx}}" ng-click="setCurrentConstruct(idx)">
+            <a data-toggle="collapse" data-parent="#construct_accordion"
+               ng-href="constructs#construct_{{constructIdx}}" 
+               ng-click="setCurrentConstruct(constructIdx)">
               {{construct.name}}
             </a>
           </h4>
         </div>
-        <div id="{{idx}}" class="panel-collapse collapse">
+        <div id="construct_{{constructIdx}}" class="panel-collapse collapse">
           <div class="panel-body">
             {{construct.description}}
             <p>
@@ -43,18 +41,57 @@
               &nbsp;&nbsp;Choose ALL questions.
             <p>
               To learn more see the
-              <a ng-href="http://cfirwiki.net/wiki/index.php?title={{constructTitle(construct.name)}}"
-                  target="_blank">wiki</a>.
+              <a href="{{wikiUrl(construct.name)}}" target="_blank">wiki</a>.
             </p>
             <p>
             <p>
-              <a ng-href="#/questions/{{idx}}" ng-show="!construct.selected">
+              <a ng-href="#/questions/{{constructIdx}}" ng-show="!construct.selected">
                 Questions
               </a>
             </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+            <div class="well" ng-show="construct.subconstructs">
+              <h5>Subconstructs</h5>
+              <div class="panel-group" id="subconstruct_accordion">      
+                <div class="panel panel-info" 
+                    ng-repeat="(subconstructIdx, subconstruct) in construct.subconstructs">
+                  <div class="panel-heading">
+                    <h5 class="panel-title">
+                      <a data-toggle="collapse" 
+                          data-parent="#subconstruct_accordion"
+                          ng-href="constructs#subconstruct_{{constructIdx}}_{{subconstructIdx}}" 
+                          ng-click="setCurrentSubconstruct(subconstructIdx)">
+                        {{subconstruct.name}}
+                      </a>
+                    </h5>
+                  </div>
+                  <div id="subconstruct_{{constructIdx}}_{{subconstructIdx}}" class="panel-collapse collapse">
+                    <div class="panel-body">
+                      {{subconstruct.description}}
+                      <p>
+                      <p>
+                      <input type="checkbox" ng-model="subconstruct.selected">
+                        &nbsp;&nbsp;Choose ALL questions.
+                      <p>
+                        To learn more see the
+                        <a ng-href="{{wikiUrl(subconstruct.name)}}" target="_blank">
+                          wiki
+                        </a>.
+                      </p>
+                      <p>
+                      <p>
+                        <a ng-href="#/questions/{{subconstructIdx}}" 
+                            ng-show="!subconstruct.selected">
+                          Questions
+                        </a>
+                      </p>
+                    </div> <!-- subconstruct panel-body -->
+                  </div>  <!-- subconstruct panel-collapse -->
+                </div>  <!-- subconstruct panel-info -->
+              </div>  <!-- subconstruct panel-group -->
+            </div>  <!-- subconstruct well -->
+          </div>  <!-- construct panel-body -->
+        </div>  <!-- construct panel-collapse -->
+      </div>  <!-- construct panel-info -->
+    </div>  <!-- construct panel-group -->
+  </div>  <!-- construct well -->
+</div>  <!-- wrapper div -->
