--- a/app/partials/intro.html
+++ b/app/partials/intro.html
@@ -1,38 +1,75 @@
 <div class="well">
-  This app will enable you to build your own customized
-  interview guide. An interview has the following structure:
-  <p></p>
-  <ul ng-controller="DomainsCtrl">
+  <h4>Welcome to the Interview Guide Tool</h4>
+  The Interview Guide Tool will help build a customized interview guide based on the CFIR constructs that are the focus of an evaluation. Remember, the 
+  <a 
+      href="http://cfirwiki.net/wiki/index.php?title=CFIR_Taxonomy"
+      target="_blank">
+    CFIR
+  </a> has the following structure:
+  <div class="well">
+    Five Domains: To learn more click the Domains link on the left.<br>
+    Each domain is divided into constructs and sub-constructs.
+  </div>
+
+  The Interview Guide Tool provides a list of questions based on actual studies and definitions for each construct or sub-construct. 
+  <p>
+  <p>
+  Many questions provide “probes” that can be used to delve into the question more deeply. Sometimes these probes provide more insight into what the question is designed to elicit – because sometimes it is not straight-forward to elicit information outright without “leading” or biasing the responses. 
+  <p>
+  <h5><b>Instructions for use</b></h5>
+  <ol>
     <li>
-      The top level is the domain. There are currently
-      {{domainsLength}} domains. To learn more click the
-      Domains link on the left.
+      Click on a Domain that contains constructs being evaluated.
     </li>
     <li>
-      Each domain is divided into constructs.
+      A list of constructs will appear. Click on a construct included in your evaluation.
     </li>
     <li>
-      Each construct contains pertinent questions.
+        You have three options:
+        <ol>
+          <li>
+            Click on “wiki” to obtain more information about the construct including definitions, qualitative coding guidelines and much more.
+          </li>
+          <li>
+            Check the box that selects all the questions for that (sub)construct.
+          </li>
+          <li>
+            Click on "Questions" to select questions individually.
+          </li>
+        </ol>
+      </li>
+      <li>
+        Repeat these three steps until you have reviewed all the constructs being evaluated.
+      </li> 
+      <li>
+        When you are done – Click on “Get Guide” from the menu on the left.
+      </li>
+      <li>
+        In a new window you will see a formatted list of the questions you chose. You can “select all” on the page and then cut and paste into a Word Document.
+      </li>
+      <li>
+        Note that question selection is cumulative. If, after using "Get Guide", you 
+        return to the original window and select more questions, these newly selected
+        questions will be ADDED to those previously selected. If you want a completely
+        new set, first click "Start Over".
+    </ol>
+
+  <h5><b>Words to the wise</b></h5>
+  <ol>
+    <li>
+      These questions are offered as a starting point – there is great latitude in how questions can be worded; concepts within constructs may not be covered by the available set of questions.
     </li>
     <li>
-      A question may or may not have probes.
-    </li>
-  </ul>
-  <h5>Theory of Operation</h5>
-  <ul>
-    <li>
-      Choose a domain
+      Questions will most likely need to be adapted to your evaluation.
     </li>
     <li>
-      Choose the constructs you feel are pertinent
+      Questions can (and most likely should) be reordered to create an effective interview structure.
     </li>
     <li>
-      For each construct choose the questions you want included in your guide
+      In most scenarios, interviews should be semi-structured: questions may be asked in varying order based on the participant and not all questions may be asked of all participants depending on their role and other considerations.
     </li>
     <li>
-      Repeat until guide is complete
+      Consider prefacing these questions with broad open-ended questions to help establish rapport and to elicit grounding stories in the words of interviewees. These questions will vary depending on your scenario.
     </li>
-  </ul>
-  When you are done you can download your guide as an editable Word
-  document.
+  </ol>
 </div>
