--- a/app/partials/intro.html
+++ b/app/partials/intro.html
@@ -1,60 +1,43 @@
 <div class="well">
   <h4>Welcome to the Interview Guide Tool</h4>
-  The Interview Guide Tool will help build a customized interview guide based on the CFIR constructs that are the focus of an evaluation. Remember, the 
+  The Interview Guide Tool will help build a customized interview guide based on the CFIR constructs that are the focus of an evaluation. Click 
   <a 
-      href="http://cfirwiki.net/wiki/index.php?title=CFIR_Taxonomy"
+      href="http://cfirwiki.net/site/constructs.html"
       target="_blank">
-    CFIR
-  </a> has the following structure:
-  <div class="well">
-    Five Domains: To learn more click the Domains link on the left.<br>
-    Each domain is divided into constructs and sub-constructs.
+    here
+  </a> to view the CFIR taxonomy: 
+
+  <p>
+  <div>
+    <h4>How to Navigate Site (see links above)</h4>
+    <ul>
+      <li>
+        <b>Choose Interview Questions:</b>
+        Choose this option to select domains, constructs, questions for
+        your customized interview guide.
+      </li>
+      <li>
+        <b>Get Guide:</b>
+        Choose this option after you've selected all the questions you
+        want. Then follow the instructions for copying your guide to a
+        word processor.
+      </li>
+      <li>
+        <b>Start Over:</b>
+        Your question choices are
+        cumulative. You can choose some questions, get a guide, then
+        choose more questions. The ensuing guide will contain ALL the
+        questions you've chosen during the session - unless you click "Start Over".
+      </li>
+      <li>
+        <b>Main Site:</b>
+        Choose this option to return to the main CFIR site.
+      </li>
+    </ul>
   </div>
 
-  The Interview Guide Tool provides a list of questions based on actual studies and definitions for each construct or sub-construct. 
   <p>
-  <p>
-  Many questions provide “probes” that can be used to delve into the question more deeply. Sometimes these probes provide more insight into what the question is designed to elicit – because sometimes it is not straight-forward to elicit information outright without “leading” or biasing the responses. 
-  <p>
-  <h5><b>Instructions for use</b></h5>
-  <ol>
-    <li>
-      Click on a Domain that contains constructs being evaluated.
-    </li>
-    <li>
-      A list of constructs will appear. Click on a construct included in your evaluation.
-    </li>
-    <li>
-        You have three options:
-        <ol>
-          <li>
-            Click on “wiki” to obtain more information about the construct including definitions, qualitative coding guidelines and much more.
-          </li>
-          <li>
-            Check the box that selects all the questions for that (sub)construct.
-          </li>
-          <li>
-            Click on "Questions" to select questions individually.
-          </li>
-        </ol>
-      </li>
-      <li>
-        Repeat these three steps until you have reviewed all the constructs being evaluated.
-      </li> 
-      <li>
-        When you are done – Click on “Get Guide” from the menu on the left.
-      </li>
-      <li>
-        In a new window you will see a formatted list of the questions you chose. You can “select all” on the page and then cut and paste into a Word Document.
-      </li>
-      <li>
-        Note that question selection is cumulative. If, after using "Get Guide", you 
-        return to the original window and select more questions, these newly selected
-        questions will be ADDED to those previously selected. If you want a completely
-        new set, first click "Start Over".
-    </ol>
-
-  <h5><b>Words to the wise</b></h5>
+  <h5><b>Advice</b></h5>
   <ol>
     <li>
       These questions are offered as a starting point – there is great latitude in how questions can be worded; concepts within constructs may not be covered by the available set of questions.
@@ -72,4 +55,5 @@
       Consider prefacing these questions with broad open-ended questions to help establish rapport and to elicit grounding stories in the words of interviewees. These questions will vary depending on your scenario.
     </li>
   </ol>
+
 </div>
